2000-07-21  Dave Peticolas  <dave@krondo.com>

	* src/calculation/fin.c: Some cleanup and renaming of function
	names to be longer and more descriptive.

	* src/gnome/dialog-transfer.c: Add Num field to the transfer
	dialog. Add APIs to change the amount, the description, and the
	accounts. Fix a bug in the default sense of the show/hide buttons.

2000-07-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/top-level.c (gnc_ui_destroy_all_subwindows): destroy
	open transfer windows.

	* src/Destroy.c: remove notes window functions.

	* src/AccWindow.h: remove notes window functions.

	* src/gnome/dialog-transfer.c: Make transfer dialog modeless.

2000-07-19  Dave Peticolas  <dave@krondo.com>

	* src/gnome/account-tree.c: Use income_expense instead of
	category for names.

2000-07-12  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c (LedgerAutoCompletion): simplify, and fix a
	bug with split auto-completion.

	* src/scm/bootstrap.scm.in: add HOME/.gnucash to scm search path.

2000-07-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/bootstrap.scm.in: bump up the stack limit

	* src/engine/date.c (xaccValidateDate): move this function from
	src/register/datecell.c to here, so it can be used elsewhere.

	* src/gnome/gnc-dateedit.c: make the widget respond to the same
	accelerators as the register date cell.

2000-07-03  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/c-interface.scm: Added scheme definition for
	pointer-token-null? if not already defined by g-wrap. Fixes bug
	when compiling with g-wrap >= 0.9.4.

2000-06-28  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-budget.c (entry_down_button_clicked): bug fix.

	* src/gnome/dialog-options.c: implement font options.

	* src/scm/prefs.scm: add options for the register fonts.

	* src/gnome/top-level.c: configure the register fonts from
	callbacks.

	* src/register/gnome/gnucash-style.c: make the register font and
	hint fonts configurable outside the register.
